<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SuggestionFragment">

    <!--Suggestion Ome Card-->

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/suggestion_one_card"
        android:layout_width="@dimen/weather_card_width"
        android:layout_height="@dimen/weather_card_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/card_margin_top"
        android:background="@android:color/white"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Suggestion"
            android:textColor="@color/colorCards"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp">

            <ImageView
                android:id="@+id/suggestion_icon"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_home_black_24dp" />

            <!--This encompasses and changes the Humidity value-->

            <TextView
                android:id="@+id/energy_impact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/energy_impact_title" />

            <TextView
                android:id="@+id/energy_impact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/energy_impact_title"
                android:text="12 KWH"
                android:textStyle="bold" />

            <!--This encompasses the changes to the wind speed value-->

            <TextView
                android:id="@+id/cost_impact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/energy_impact_title"
                android:layout_marginTop="12dp"
                android:text="@string/cost_impact_title" />

            <TextView
                android:id="@+id/savings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/energy_impact"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/cost_impact_title"
                android:text="$3.6 SAVINGS"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/cost_impact_title"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/ignore_suggestion"
                android:textColor="@color/colorCards"
                android:background="?android:attr/selectableItemBackground"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
