<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/indoor_card"
            android:layout_width="@dimen/weather_card_width"
            android:layout_height="@dimen/weather_card_height"
            android:layout_gravity="center"
            android:background="@android:color/white"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/indoor_text_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="@string/indoor_conditions"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/outdoor_card"
            android:layout_width="@dimen/weather_card_width"
            android:layout_height="@dimen/weather_card_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin_top"
            android:background="@android:color/white"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/outdoor_text_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="@string/outdoor_conditions"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/suggestions_card_title"
            android:layout_width="@dimen/weather_card_width"
            android:layout_height="@dimen/suggestions_card_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin_top"
            android:background="@color/colorPrimary"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/suggestions_text_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="@string/suggestions_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/suggestion_one_card"
            android:layout_width="@dimen/weather_card_width"
            android:layout_height="@dimen/weather_card_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin_top"
            android:background="@color/colorPrimary"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/suggestion_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="Suggestion One"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/suggestion_two_card"
            android:layout_width="@dimen/weather_card_width"
            android:layout_height="@dimen/weather_card_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_margin_top"
            android:background="@color/colorPrimary"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/suggestion_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="Suggestion Two"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>